@@ -1,3 +1,9 @@
+2002-06-26  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=86575
+	* gnome-keybinding-properties.c (setup_dialog) : handle missing
+	  pixmaps more smoothly.
+
 2002-06-21  Stephen Browne <stephen.bronwe@sun.com>
 
 	* gnome-keybinding-properties.c : moved metacity detection
